--- a/_src/assets/scss/main.scss
+++ b/_src/assets/scss/main.scss
@@ -1,5 +1,11 @@
-@import "core/settings";
-@import "components/page";
-@import "components/header";
-@import "components/links";
-@import "components/footer";
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+body {
+  background-color: grey;
+}
+h1 {
+  color: #fabada;
+}
