--- a/_src/templates/index.html
+++ b/_src/templates/index.html
@@ -1,23 +1,56 @@
 <!DOCTYPE html>
 <html lang="es">
-
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Adalab Web Starter Kit</title>
-    <link rel="icon" href="./favicon.png" />
-    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+    <title>Mi web</title>
+
     <link rel="stylesheet" href="./assets/css/main.css" />
   </head>
 
   <body>
-    <div class="page">
-      <partial src="_header.html" title="Bienvenidos a Adalab"></partial>
-      <partial src="_main.html" label="Main"></partial>
-      <partial src="_link.html" aClass="link__adalab" text="Adalab" url="https://adalab.es"></partial>
-      <partial src="_link.html" aClass="link__github" text="GitHub" url="https://github.com"></partial>
-      <partial src="_footer.html"></partial>
-    </div>
+    <header class="hero">
+      <div>
+        <h1>anonymous proxy</h1>
+        <p>In hac habitasse platea dictumst</p>
+        <a href="#" class="header-button">flecha</a>
+      </div>
+    </header>
+    <main>
+      <h2>looking though a window</h2>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet voluptatem
+        accusamus nesciunt odio vitae! .
+      </p>
+      <a href="#" class="main-button">Go</a>
+    </main>
+    <aside>
+      <h2>3 reasons to purchase</h2>
+      <h3>Ut sed metus</h3>
+      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
+      <h3>Curabitur ac erat</h3>
+      <p>Magnam ratione voluptas non, mollitia.</p>
+      <h3>Morbi dictum</h3>
+      <p>Quos, aliquam nesciunt.</p>
+      <a href="#" class="aside-button">More reasons</a>
+    </aside>
+    <footer>
+      <nav class="references">
+        <ul>
+          <li><a href="https://adalab.es/">articles</a></li>
+          <li><a href="https://adalab.es/">events</a></li>
+          <li><a href="https://adalab.es/">reasons</a></li>
+          <li><a href="https://adalab.es/">tips</a></li>
+        </ul>
+      </nav>
+      <nav class="social-networks">
+        <ul>
+          <li><a href="https://adalab.es/">twitter</a></li>
+          <li><a href="https://adalab.es/">instagram</a></li>
+          <li><a href="https://adalab.es/">mastodon.social</a></li>
+        </ul>
+      </nav>
+      <small>&copy; 2017 we <img src="" alt="" /> components </small>
+    </footer>
   </body>
-
 </html>
