--- a/_src/assets/scss/main.scss
+++ b/_src/assets/scss/main.scss
@@ -1,11 +1,76 @@
-* {
+body {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
 }
-body {
-  background-color: grey;
+.hero {
+  border: 4px solid red;
+  color: red($color: #000000);
+  width: 100vw;
+  height: 568px;
+  display: flex;
+  justify-content: center;
+
+  // text styles
+  align-items: center;
+  text-align: center;
+  color: white;
+
+  background-image: url(../images/cover.jpg);
+  background-size: cover;
+  background-position: center center;
+  background-repeat: no-repeat;
 }
-h1 {
-  color: #fabada;
+
+.hero-content {
+  border: 4px solid lightgreen;
+}
+.hero h1 {
+  font-family: "Roboto";
+  font-size: 2.625rem;
+  text-transform: capitalize;
+  list-style: height 55px;
+}
+.main {
+  border: 4px solid yellow;
+}
+.aside {
+  border: 4px solid purple;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
+  width: 624px;
+  height: 320px;
+}
+.reasons {
+  grid-column: span 12;
+  background-color: turquoise;
+}
+.reason-1 {
+  grid-column: span 4;
+  background-color: lightsalmon;
+}
+.reason-2 {
+  grid-column: span 4;
+  background-color: burlywood;
+}
+.reason-3 {
+  grid-column: span 4;
+  background-color: pink;
+}
+.button-reasons {
+  grid-column: span 12;
+  background-color: lime;
+}
+.footer {
+  border: 4px solid orange;
+}
+.references {
+  border: 4px solid blue;
+}
+.networks {
+  border: 4px solid lightseagreen;
+}
+.copyright {
+  border: 4px solid rgb(248, 34, 202);
 }
