--- a/_src/templates/index.html
+++ b/_src/templates/index.html
@@ -12,22 +12,33 @@
   </head>
 
   <body>
+    <div class="hamburger">
+      <a href="https://adalab.es/">
+        <img
+          class="hamburger-inner"
+          src="../assets/images/ico-menu.png"
+          alt="Menu-icon"
+          title="menu"
+        />
+      </a>
+    </div>
     <header class="hero">
-      <a class="menu-button"></a>
       <div class="hero-content">
         <h1>anonymous proxy</h1>
         <p>In hac habitasse platea dictumst</p>
         <button type="button">flecha</button>
       </div>
     </header>
+
     <main>
       <div class="main">
-        <h2>looking though a window</h2>
+        <small class="tips">insomnia tips</small>
+        <h2 class="main-h2">looking though a window</h2>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet
           voluptatem accusamus nesciunt odio vitae! .
         </p>
-        <a href="#" class="main-button">Go</a>
+        <button type="button">Go</button>
       </div>
     </main>
     <aside>
@@ -37,18 +48,18 @@
         </div>
         <div class="reason-1">
           <h3>Ut sed metus</h3>
-          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
+          <p>Lorem, ipsum dolor sit amet.</p>
         </div>
         <div class="reason-2">
           <h3>Curabitur ac erat</h3>
-          <p>Magnam ratione voluptas non, mollitia.</p>
+          <p>Magnam ratione voluptas non.</p>
         </div>
         <div class="reason-3">
           <h3>Morbi dictum</h3>
           <p>Quos, aliquam nesciunt.</p>
         </div>
         <div class="button-reasons">
-          <a href="#" class="aside-button">More reasons</a>
+          <button type="button">More reasons</button>
         </div>
       </div>
     </aside>
