--- a/_src/templates/index.html
+++ b/_src/templates/index.html
@@ -24,9 +24,18 @@
     </div>
     <header class="hero">
       <div class="hero-content">
-        <h1>anonymous proxy</h1>
+        <span class="title-item">anonymous</span>
+        <span class="title-item">proxy</span>
         <p>In hac habitasse platea dictumst</p>
-        <button type="button">flecha</button>
+      </div>
+      <div class="circle-hero">
+        <a href="#reasons">
+          <img
+            src="../assets/images/ico-scroll-down.png"
+            alt="icon-scroll"
+            title="Go reasons to purchase"
+          />
+        </a>
       </div>
     </header>
 
@@ -41,9 +50,10 @@
         <button type="button">Go</button>
       </div>
     </main>
+
     <aside>
       <div class="aside">
-        <div class="reasons">
+        <div id="reasons" class="reasons">
           <h2>3 reasons to purchase</h2>
         </div>
         <div class="reason-1">
