--- a/_src/templates/index.html
+++ b/_src/templates/index.html
@@ -56,7 +56,7 @@
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet
           voluptatem accusamus nesciunt odio vitae! .
         </p>
-        <button type="button">Go</button>
+        <button class="main-button">Go</button>
       </div>
     </main>
 
@@ -78,7 +78,7 @@
           <p>Quos, aliquam nesciunt.</p>
         </div>
         <div class="button-reasons">
-          <button type="button">More reasons</button>
+          <button>More reasons</button>
         </div>
       </div>
     </aside>
