--- a/_src/templates/index.html
+++ b/_src/templates/index.html
@@ -9,10 +9,6 @@
       rel="stylesheet"
     />
     <link
-      href="https://fonts.googleapis.com/css?family=Roboto:700&display=swap"
-      rel="stylesheet"
-    />
-    <link
       href="https://fonts.googleapis.com/css?family=Roboto&display=swap"
       rel="stylesheet"
     />
@@ -23,7 +19,6 @@
     <div class="hamburger">
       <a href="https://adalab.es/">
         <img
-          id="menu"
           class="hamburger-inner"
           src="../assets/images/ico-menu.png"
           alt="Menu-icon"
@@ -31,7 +26,7 @@
         />
       </a>
     </div>
-    <header class="hero">
+    <header class="hero" id="hero">
       <div class="hero-content">
         <span class="title-item">anonymous</span>
         <span class="title-item">proxy</span>
@@ -67,15 +62,15 @@
         </div>
         <div class="reason-1">
           <h3>Ut sed metus</h3>
-          <p>Lorem, ipsum dolor sit amet.</p>
+          <p>Lorem, ipsum dolor sit amet, consecteur.</p>
         </div>
         <div class="reason-2">
           <h3>Curabitur ac erat</h3>
-          <p>Magnam ratione voluptas non.</p>
+          <p>Mauris mattis urna quis lorem molestie.</p>
         </div>
         <div class="reason-3">
           <h3>Morbi dictum</h3>
-          <p>Quos, aliquam nesciunt.</p>
+          <p>Aliquam in dolor et dolor tincidunt.</p>
         </div>
         <div class="button-reasons">
           <button>More reasons</button>
@@ -85,7 +80,7 @@
     <footer>
       <div class="footer">
         <div class="footer-circle">
-          <a href="#menu">
+          <a href="#hero">
             <img
               src="../assets/images/ico-arrow.png"
               alt="icon-arrow"
@@ -94,7 +89,9 @@
           </a>
         </div>
         <div class="references">
+          <!-- flex -->
           <nav class="nav-references">
+            <!-- flex -->
             <ul class="list-footer">
               <li>
                 <a class="link-footer" href="https://adalab.es/">articles</a>
@@ -112,7 +109,9 @@
           </nav>
         </div>
         <div class="networks">
+          <!--flex-->
           <nav class="nav-networks">
+            <!-- flex -->
             <ul class="list-footer">
               <li>
                 <a class="link-footer" href="https://adalab.es/">twitter</a>
