--- a/_src/templates/index.html
+++ b/_src/templates/index.html
@@ -88,50 +88,52 @@
             />
           </a>
         </div>
+        <div class="footer-items">
+          <div class="references">
+            <!-- flex -->
+            <nav class="nav-references">
+              <!-- flex -->
+              <ul class="list-footer">
+                <li>
+                  <a class="link-footer" href="https://adalab.es/">articles</a>
+                </li>
+                <li>
+                  <a class="link-footer" href="https://adalab.es/">events</a>
+                </li>
+                <li>
+                  <a class="link-footer" href="https://adalab.es/">reasons</a>
+                </li>
+                <li>
+                  <a class="link-footer" href="https://adalab.es/">tips</a>
+                </li>
+              </ul>
+            </nav>
+          </div>
+          <div class="networks">
+            <!--flex-->
+            <nav class="nav-networks">
+              <!-- flex -->
+              <ul class="list-footer">
+                <li>
+                  <a class="link-footer" href="https://adalab.es/">twitter</a>
+                </li>
+                <li>
+                  <a class="link-footer" href="https://adalab.es/">instagram</a>
+                </li>
+                <li>
+                  <a class="link-footer" href="https://adalab.es/"
+                    >mastodon.social</a
+                  >
+                </li>
+              </ul>
+            </nav>
+          </div>
 
-        <div class="references">
-          <!-- flex -->
-          <nav class="nav-references">
-            <!-- flex -->
-            <ul class="list-footer">
-              <li>
-                <a class="link-footer" href="https://adalab.es/">articles</a>
-              </li>
-              <li>
-                <a class="link-footer" href="https://adalab.es/">events</a>
-              </li>
-              <li>
-                <a class="link-footer" href="https://adalab.es/">reasons</a>
-              </li>
-              <li>
-                <a class="link-footer" href="https://adalab.es/">tips</a>
-              </li>
-            </ul>
-          </nav>
+          <small class="copyright">
+            <span> &copy; 2017 </span>
+            <span> we ❤️ components</span>
+          </small>
         </div>
-        <div class="networks">
-          <!--flex-->
-          <nav class="nav-networks">
-            <!-- flex -->
-            <ul class="list-footer">
-              <li>
-                <a class="link-footer" href="https://adalab.es/">twitter</a>
-              </li>
-              <li>
-                <a class="link-footer" href="https://adalab.es/">instagram</a>
-              </li>
-              <li>
-                <a class="link-footer" href="https://adalab.es/"
-                  >mastodon.social</a
-                >
-              </li>
-            </ul>
-          </nav>
-        </div>
-        <small class="copyright">
-          <span> &copy; 2017 </span>
-          <span> we ❤️ components</span>
-        </small>
       </div>
     </footer>
   </body>
