--- a/_src/assets/scss/main.scss
+++ b/_src/assets/scss/main.scss
@@ -43,8 +43,8 @@
 .hero {
   border: 4px solid red;
   color: red($color: #000000);
-  width: 100vw;
-  height: 568px;
+  // width: 100vw;
+  height: 100vh;
   display: flex;
   justify-content: center;
   flex-direction: column;
@@ -52,11 +52,13 @@
   align-items: center;
   text-align: center;
   color: white;
-
   background-image: url(../images/cover.jpg);
   background-size: cover;
   background-position: center center;
   background-repeat: no-repeat;
+}
+.hero-content {
+  margin: 284px 15px 174px 15px;
 }
 .hero .title-item {
   display: block;
@@ -69,6 +71,7 @@
 .hero p {
   font-size: 1rem;
   font-family: "Roboto";
+  margin-top: 10px;
 }
 .hero-circle {
   width: 45px;
@@ -79,7 +82,7 @@
   justify-content: center;
   align-items: center;
   position: absolute;
-  top: 470px;
+  bottom: 53px;
 }
 //  MAIN
 .main {
@@ -313,17 +316,23 @@
 
 @media all and (min-width: 768px) {
   .hero {
-    width: 100vw;
-    height: 768px;
-    padding-top: 384px;
+    height: 100vh;
+    // padding-top: 384px;
   }
+  .hero-content {
+    margin: 384px 39px 172px 39px;
+  }
+
   .hero .title-item {
     font-size: 5rem;
     line-height: 106px;
   }
   .hero p {
     font-size: 1.5rem;
-    font-family: "roboto";
+    margin-top: 20px;
+  }
+  .hero-circle {
+    bottom: 45px;
   }
 
   .main {
