--- a/_src/templates/index.html
+++ b/_src/templates/index.html
@@ -46,7 +46,7 @@
     <main>
       <div class="main">
         <small class="tips">insomnia tips</small>
-        <h2>looking though a window</h2>
+        <h2>looking through a window</h2>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet
           voluptatem accusamus nesciunt odio vitae! .
@@ -98,6 +98,9 @@
                   <a class="link-footer" href="https://adalab.es/">articles</a>
                 </li>
                 <li>
+                  <a class="link-footer" href="https://adalab.es/">books</a>
+                </li>
+                <li>
                   <a class="link-footer" href="https://adalab.es/">events</a>
                 </li>
                 <li>
@@ -130,8 +133,8 @@
           </div>
 
           <small class="copyright">
-            <span> &copy; 2017 </span>
-            <span> we ❤️ components</span>
+            <span class="copy-item"> &copy; 2017 </span>
+            <span class="copy-item"> we ❤️ components</span>
           </small>
         </div>
       </div>
