--- a/_src/assets/scss/main.scss
+++ b/_src/assets/scss/main.scss
@@ -3,26 +3,6 @@
   margin: 0;
   padding: 0;
 }
-// CAJAS
-.hero-content {
-  border: 4px solid lightgreen;
-}
-
-.main {
-  border: 4px solid yellow;
-}
-.footer {
-  border: 4px solid orange;
-}
-.references {
-  border: 4px solid blue;
-}
-.networks {
-  border: 4px solid lightseagreen;
-}
-.copyright {
-  border: 4px solid rgb(248, 34, 202);
-}
 // HEADER
 
 .hamburger {
@@ -41,7 +21,6 @@
   height: 14px;
 }
 .hero {
-  border: 4px solid red;
   color: red($color: #000000);
   // width: 100vw;
   height: 100vh;
@@ -158,6 +137,7 @@
 .aside .reasons {
   font-family: "Roboto Slab";
   font-weight: bold;
+  font-size: 1rem;
   text-transform: capitalize;
   display: flex;
   justify-content: center;
@@ -182,6 +162,8 @@
   margin: 0px;
   font-family: "Roboto Slab";
   font-weight: bold;
+  font-size: 1.125rem;
+  line-height: 30px;
 }
 .aside p {
   margin: 0px 70px;
@@ -363,8 +345,21 @@
       "reason-1 reason-2 reason-3"
       "button-reasons button-reasons button-reasons";
   }
-  .reasons {
-    padding-top: 30px;
+  .aside .reasons {
+    font-size: 1.625rem;
+    line-height: 45px;
+  }
+
+  .aside h3 {
+    font-size: 1.5rem;
+  }
+  .aside p {
+    font-size: 1.25 rem;
+    margin-left: 35.7px;
+    margin-right: 40px;
+  }
+  .aside button {
+    width: 210px;
   }
   .footer {
     height: 240px;
@@ -413,16 +408,7 @@
   }
 
   .footer-circle {
-    position: relative;
-    top: -10px;
-    width: 45px;
-    height: 45px;
-    background: white;
-    border-radius: 50%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    top: -5px;
   }
 }
 @media all and (min-width: 1200px) {
@@ -453,5 +439,25 @@
   }
   .main-button {
     width: 160px;
+  }
+  .aside {
+    height: 427px;
+  }
+  aside.reasons {
+    font-size: 2rem;
+  }
+  .aside p {
+    margin-left: 81.2px;
+    margin-right: 85px;
+  }
+  .aside button {
+    width: 255px;
+  }
+  .footer-items {
+    padding: 45px 290px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: flex-start;
   }
 }
